# plcrash.rs

./: Cargo.toml  LICENSE  build.rs  shell.nix
protos/: crash_report.proto
src/: error.rs  lib.rs  machine.rs  symbolicate.rs  text.rs
src/protos/: crash_report.rs  mod.rs
tests/: MetaZ-crash.txt  MetaZ.plcrash  report_test.rs
