[package]
name = "plcrash"
version = "0.1.0"
authors = ["Brian Olsen <brian@maven-group.org>"]
build = "build.rs"
edition = "2018"

[lib]
name = "plcrash"
path = "src/lib.rs"

#[[bin]]
#name = "metazite"
#path = "src/main.rs"
#doc = false

[dependencies]
addr2line = "~0.8.0"
chrono = "0.4"
failure = "~0.1.5"
gimli = "~0.16.1"
goblin = "~0.0.21"
#lru = "0.1"
plist = "~0.4.1"
protobuf = "~2.6.2"
serde = {version = "1.0", features = ["derive"]}
zip = "~0.5.2"

[dependencies.uuid]
version = "0.7.4"
features = ["v4"]

[build-dependencies]
protoc-rust = "~2.6.2"
